# fastapi-contacts-auth-mail

./: .env-example  =auth.reset_password.txt  =auth.signup.json.txt  =contacts.json.txt  README.md  do.pytests.sh  do.run.sh  do.tests.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 1d63889d97e4_init.py  250659ceadfb_17_08_2023_00_12_36.py  b5fbba893d0c_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_reset_password.html  email_verification.html
tests/: conftest.py  do.pytests  do.tests  pytest.txt  test_route_auth.py  test_unit_repository_contacts.py
